--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           bijaksana serta membuat hidupku lebih terarah, selamat hari lahir,
           Panjang umur teman.
         </p>
-        <form action="https://wa.me/6289698712185" target="_blank">
+        <form action="https://wa.me/6289698712185?text=Happy%20Birthday%20Tia%20Elvira,%Sehat%20selalu%20yaa" target="_blank">
           <button id="hideButton">Beri Ucapan!</button>
         </form>
 
